--- a/PokemonApp/PokemonApp/appsettings.json
+++ b/PokemonApp/PokemonApp/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=pokemon-app-db;Port=5432;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=pokemon-app-db;Port=5432;Username=postgres;Password=1234"
+  },
+  "Auth0": {
+    "Domain": "dev-prkyadz7zwny3jvw.us.auth0.com",
+    "Audience": "https://pokemonapp/api"
   }
 }
